--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
     <style>
       * { box-sizing: border-box; }
-      body { margin: 0; font-family: ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, 'Apple Color Emoji', 'Segoe UI Emoji'; background: #0b0c0d; color: #fff; }
+      /* body { margin: 0; font-family: ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, 'Apple Color Emoji', 'Segoe UI Emoji'; background: #0b0c0d; color: #fff; } */
+      body { margin: 0; font-family: 'Inter', sans-serif; background: #0b0c0d; color: #fff; }
       .header { display: flex; justify-content: space-between; align-items: center; padding: 12px 16px; border-bottom: 1px solid #222; background: #121315; position: sticky; top: 0; z-index: 10; }
       .map-wrap { height: 420px; }
       .section { padding: 16px; }
