--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       * { box-sizing: border-box; }
       /* body { margin: 0; font-family: ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, 'Apple Color Emoji', 'Segoe UI Emoji'; background: #0b0c0d; color: #fff; } */
       body { margin: 0; font-family: 'Inter', sans-serif; background: #0b0c0d; color: #fff; }
-      .header { display: flex; justify-content: space-between; align-items: center; padding: 12px 16px; border-bottom: 1px solid #222; background: #121315; position: sticky; top: 0; z-index: 10; }
+      .header { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #222; background: #121315; position: sticky; top: 0; z-index: 10; }
       .map-wrap { height: 420px; }
       .section { padding: 16px; }
       .section h2 { font-size: 18px; margin: 0 0 12px; display: flex; align-items: center; gap: 8px;}
